FEAT: Modified the way to add items to a list. Add the documentation for the /api/lists/{listId}/items endpoint
